--- a/index.html
+++ b/index.html
@@ -82,21 +82,27 @@
       <!-- Education Section -->
       <h3 id="education">Education</h3>
       <div style="padding-right: 10px; padding-left: 20px;">
-        <p><strong>Your University</strong> <br />
-          Degree and Major <br />
-          Years Attended</p>
-        <p><strong>Your Previous University</strong> <br />
-          Degree and Major <em>(Honors, if any)</em> <br />
-          Years Attended</p>
+        <p><strong>University of Illinois Urbana-Champaign</strong> <br />
+          M.S. Computer Science <br />
+          2024 - Present</p>
+        <p><strong>University of Pennsylvania</strong> <br />
+          M.S. Robotics <br />
+          2022 - 2024</p>
+        <p><strong>ShanghaiTech University</strong> <br />
+          B.E. Computer Science<br />
+          2018 - 2022</p>
       </div>
 
       <!-- Experience Section -->
       <h3 id="experience">Experience</h3>
       <div style="padding-right: 10px; padding-left: 20px;">
-        <p><strong>Company/Organization Name</strong> <br />
-          Position <br />
-          <em>Supervisors:</em> <a href="https://scholar.google.com/citations?user=SUPERVISOR_ID&hl=en">Supervisor Name</a> <br />
-          Duration</p>
+        <p><strong>Trade Terminal</strong> <br />
+         Software Engineer Intern<br />
+                December 2023 - January 2024  </p>
+        <p><strong>DiDi</strong> <br />
+          Software Engineer Intern <br />
+          
+          June 2023 - September 2023</p>
         <!-- Repeat for additional experiences -->
       </div>
 
@@ -125,26 +131,7 @@
       </div>
 
       <!-- Tutorials Section -->
-      <h3 id="tutorials" style="margin: 2px 0px -15px;">Tutorials</h3>
-      <div class="publications">
-        <ol class="bibliography">
-          <li>
-            <div class="pub-row">
-              <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
-                <div class="title">Tutorial Title</div>
-                <div class="author">Co-presenters</div>
-                <div class="periodical"><em><strong>Conference or Event Name</strong></em></div>
-                <div class="links">
-                  <a href="https://link-to-tutorial.com">Link</a>
-                </div>
-              </div>
-            </div>
-          </li>
-          <div style="line-height:50%;"><br /></div>
-          <!-- Repeat for additional tutorials -->
-        </ol>
-      </div>
-
+      
       <br>
     </section>
 
