--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section>
       <!-- About Me Section -->
       <h3 id="about-me">About Me</h3>
-      <p>A brief introduction about your academic background, research interests, and professional goals.</p>
+       <p>I am a CS graudate student in UIUC. My research interest lies on how to make  </p>
 
       <!-- Projects Section -->
       <h3 id="projects">Projects</h3>
