--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section>
       <!-- About Me Section -->
       <h3 id="about-me">About Me</h3>
-       <p>I am a CS graudate student in UIUC. My research interest lies on how to make  </p>
+       <p>I am a CS graudate student at UIUC. My research interest lies on ML System, Computer Architecture. Specially, I am excited about how to make ML/DL applications efficient on a large scale, distributed system. I am fortunate to work with <a href="https://minjiazhang.github.io/">Minjia Zhang</a> at UIUC. </p>
 
       <!-- Projects Section -->
       <h3 id="projects">Projects</h3>
