--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="pub-row">
               <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
                 <div class="title">MiniKV: Pushing the Limits of LLM Inference via 2-Bit Layer-Discriminative KV Cache</div>
-                <div class="author"> Akshat Sharma, Hangliang Ding,<strong>Jianping Li</strong>, Neel Dani, Minjia Zhang</div>
+                <div class="author"> Akshat Sharma, Hangliang Ding, <strong>Jianping Li</strong>, Neel Dani, Minjia Zhang</div>
                 <div class="periodical"><em><strong>Arxiv Available</strong></em></div>
                 <div class="links">
                   <a href="https://arxiv.org/abs/2411.18077">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
@@ -125,7 +125,7 @@
           <div style="line-height:50%;"><br /></div>
           <!-- Repeat for additional publications -->
           <div style="position: relative; padding-right: 10px; padding-left: 20px;">
-            <i style="font-size:.9rem;">/i>
+            <i style="font-size:.9rem;"/i>
           </div>
         </ol>
       </div>
