--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <h3 id="about-me">About Me</h3>
       <p>I am a CS graudate student at UIUC. I am fortunate to work with <a href="https://minjiazhang.github.io/">Minjia Zhang</a> at UIUC. </p>
 
-      <p>My research interests lie in Machine Learning System, Computer Architecture. 
-         Specially, I am excited about how to make ML/DL computations efficient on a large-scale, distributed heterogeneous system. 
+      <p>My research interests lie in Machine Learning System, Distributed System. 
+         Specially, I am excited about how to make ML/DL applications efficient on a large-scale, distributed heterogeneous system. 
          I find it is a lot of fun to optimize it from both system/hardware side and algorithm side. 
       </p>
 
