--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
       <!-- Experience Section -->
       <h3 id="experience">Experience</h3>
       <div style="padding-right: 10px; padding-left: 20px;">
+        <p><strong>Meta</strong> <br />
+         Software Engineer Intern<br />
+                May 2025 - August 2025  </p>
         <p><strong>Trade Terminal</strong> <br />
          Software Engineer Intern<br />
                 December 2023 - January 2024  </p>
@@ -109,7 +112,15 @@
         <ol class="bibliography">
           <li>
             <div class="pub-row">
-              <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
+<!--               <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
+                <div class="title">X-MoE: Enabling Scalable Training for Emerging Mixture-of-Experts Architectures on HPC Platform</div>
+                <div class="author"> Yueming Yuan, Hangliang Ding, <strong>Jianping Li</strong>, Neel Dani, Minjia Zhang</div>
+                <div class="periodical"><em><strong>Arxiv Available</strong></em></div>
+                <div class="links">
+                  <a href="https://arxiv.org/abs/2411.18077">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
+                </div>
+              </div> -->
+              
                 <div class="title">MiniKV: Pushing the Limits of LLM Inference via 2-Bit Layer-Discriminative KV Cache</div>
                 <div class="author"> Akshat Sharma, Hangliang Ding, <strong>Jianping Li</strong>, Neel Dani, Minjia Zhang</div>
                 <div class="periodical"><em><strong>Arxiv Available</strong></em></div>
