--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
           <li>
             <div class="pub-row">
               <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
-                <div class="title">MiniKV: Pushing the Limits of LLM Inference via 2-Bit Layer-Discriminative KV Cache</div>
-                <div class="author"> Akshat Sharma, Hangliang Ding, <strong>Jianping Li</strong>, Neel Dani, Minjia Zhang</div>
-                <div class="periodical"><em><strong>Arxiv Available</strong></em></div>
+                <div class="title">X-MoE: Enabling Scalable Training for Emerging Mixture-of-Experts Architectures on HPC Platforms</div>
+                <div class="author"> Yueming Yuan, Ahan Gupta, <strong>Jianping Li</strong>, Sajal Dash, Feiyi Wang, Minjia Zhang</div>
+                <div class="periodical"><em><strong>SC'2025 (Best Student Paper Nomination)</strong></em></div>
                 <div class="links">
                   <a href="https://arxiv.org/abs/2411.18077">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
                 </div>
@@ -124,7 +124,7 @@
               <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
                 <div class="title">MiniKV: Pushing the Limits of LLM Inference via 2-Bit Layer-Discriminative KV Cache</div>
                 <div class="author"> Akshat Sharma, Hangliang Ding, <strong>Jianping Li</strong>, Neel Dani, Minjia Zhang</div>
-                <div class="periodical"><em><strong>Arxiv Available</strong></em></div>
+                <div class="periodical"><em><strong>ACL'2025 (Findings)</strong></em></div>
                 <div class="links">
                   <a href="https://arxiv.org/abs/2411.18077">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
                 </div>
