--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
       <!-- Experience Section -->
       <h3 id="experience">Experience</h3>
       <div style="padding-right: 10px; padding-left: 20px;">
+        <p><strong>Meta</strong> <br />
+         Software Engineer Intern<br />
+                May 2025 - August 2025  </p>
         <p><strong>Trade Terminal</strong> <br />
          Software Engineer Intern<br />
                 December 2023 - January 2024  </p>
@@ -112,7 +115,7 @@
               <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
                 <div class="title">X-MoE: Enabling Scalable Training for Emerging Mixture-of-Experts Architectures on HPC Platforms</div>
                 <div class="author"> Yueming Yuan, Ahan Gupta, <strong>Jianping Li</strong>, Sajal Dash, Feiyi Wang, Minjia Zhang</div>
-                <div class="periodical"><em><strong>SC'2025 (Best Student Paper Nomination)</strong></em></div>
+                <div class="periodical"><em><strong>SC'2025 (<span style="color: #003366;">Best Student Paper Nomination</span>)</strong></em></div>
                 <div class="links">
                   <a href="https://arxiv.org/abs/2411.18077">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
                 </div>
