--- a/index.html
+++ b/index.html
@@ -34,9 +34,19 @@
 </head>
 
 <body>
-  
+  <!-- Sidebar Navigation -->
+<nav class="sidebar">
+  <ul>
+    <li><a href="#about-me">About</a></li>
+    <li><a href="#education">Education</a></li>
+    <li><a href="#experience">Experience</a></li>
+    <li><a href="#publications">Publications</a></li>
+  </ul>
+</nav>
 
-  <div class="wrapper">
+
+  <div class="wrapper" style="margin-left: 220px;">
+
     <header>
       <!-- Avatar Image -->
       <a class="image avatar"><img src="assets/img/profile.jpg" alt="avatar" /></a>
@@ -66,16 +76,7 @@
       </div>
       <br>
 
-      <div style="position: fixed; left: 0; top: 0; height: 100%; width: 180px; background-color: #f8f8f8; padding: 20px; box-shadow: 2px 0 5px rgba(0,0,0,0.1); font-size: 0.9rem;">
-  <nav>
-    <ul style="list-style: none; padding: 0; margin: 0;">
-      <li><a href="#about-me">About Me</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#publications">Publications</a></li>
-    </ul>
-  </nav>
-</div>
+      
     </header>
 
     <section>
