--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 
 <body>
   <!-- Sidebar Navigation -->
-<nav class="sidebar">
+<!-- <nav class="sidebar">
   <ul>
     <li><a href="#about-me">About</a></li>
     <li><a href="#education">Education</a></li>
     <li><a href="#experience">Experience</a></li>
     <li><a href="#publications">Publications</a></li>
   </ul>
-</nav>
+</nav> -->
 
 
-  <div class="wrapper" style="margin-left: 190px;">
+  <div class="wrapper">
 
 
     <header>
