--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
       </div>
       <br>
 
+      <!-- Navigation Bar -->
+      <nav class="main-nav">
+        <ul>
+          <li><a href="#about-me">About</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#publications">Publications</a></li>
+        </ul>
+      </nav>
+      <br>
+
       
     </header>
 
