--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       <h3 id="about-me">About Me</h3>
       <p>I am a CS graudate student at UIUC. I am fortunate to work with <a href="https://minjiazhang.github.io/">Minjia Zhang</a> at UIUC. </p>
 
-      <p>My research interests lie in Machine Learning System, Distributed System. 
-         Specially, I am excited about how to make ML/DL applications efficient on a large-scale, distributed heterogeneous system. 
-         I find it is a lot of fun to optimize it from both system/hardware side and algorithm side. 
+      <p>My research interests lie in Machine Learning Systems. 
+         Specially, I am excited about how to make LLM training/inference efficient on a large-scale, distributed heterogeneous system. 
+         I love building open-source softwares, and I am always open to research collaboration. Feel free to contact me via email.
       </p>
 
       
