--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
     <section>
       <!-- About Me Section -->
       <h3 id="about-me">About Me</h3>
-      <p>I am a CS graudate student at UIUC. I am fortunate to work with <a href="https://minjiazhang.github.io/">Minjia Zhang</a> at UIUC. </p>
+      <p>I am a CS graudate student at UIUC. I am fortunate to work with <a href="https://minjiazhang.github.io/">Minjia Zhang</a> at UIUC. My research interests lie in Machine Learning Systems. 
+         Specially, I am excited about how to make LLM training and inference efficient on a large-scale, distributed heterogeneous system. </p>
 
-      <p>My research interests lie in Machine Learning Systems. 
-         Specially, I am excited about how to make LLM training/inference efficient on a large-scale, distributed heterogeneous system. 
-         I love building open-source softwares, and I am always open to research collaboration. Feel free to contact me via email.
+      <p>
+         I love building open-source software, and I am always open to research collaboration. Feel free to contact me via email.
       </p>
 
       
