--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="author"> Yueming Yuan, Ahan Gupta, <strong>Jianping Li</strong>, Sajal Dash, Feiyi Wang, Minjia Zhang</div>
                 <div class="periodical"><em><strong>SC'2025 (<span style="color: #003366;">Best Student Paper Nomination</span>)</strong></em></div>
                 <div class="links">
-                  <a href="https://arxiv.org/abs/2411.18077">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
+                  <a href="https://www.arxiv.org/pdf/2508.13337">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
                 </div>
               </div>
             </div>
@@ -154,7 +154,7 @@
                 <div class="author"> Akshat Sharma, Hangliang Ding, <strong>Jianping Li</strong>, Neel Dani, Minjia Zhang</div>
                 <div class="periodical"><em><strong>ACL'2025 (Findings)</strong></em></div>
                 <div class="links">
-                  <a href="https://arxiv.org/abs/2411.18077">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
+                  <a href="https://arxiv.org/abs/2411.18077">Paper</a> / <a href="https://github.com/Supercomputing-System-AI-Lab/X-MoE">Code</a>
                 </div>
               </div>
             </div>
