--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
                 <div class="title">X-MoE: Enabling Scalable Training for Emerging Mixture-of-Experts Architectures on HPC Platforms</div>
                 <div class="author"> Yueming Yuan, Ahan Gupta, <strong>Jianping Li</strong>, Sajal Dash, Feiyi Wang, Minjia Zhang</div>
-                <div class="periodical"><em><strong>SC'2025 (<span style="color: #003366;">Best Student Paper Nomination</span>)</strong></em></div>
+                <div class="periodical"><em><strong>SC'2025 (<span style="color: #3399ff;">Best Student Paper Nomination</span>)</strong></em></div>
                 <div class="links">
                   <a href="https://www.arxiv.org/pdf/2508.13337">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
                 </div>
