--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section>
       <!-- About Me Section -->
       <h3 id="about-me">About Me</h3>
-      <p>I am a CS graudate student at UIUC. I am fortunate to work with <a href="https://minjiazhang.github.io/">Minjia Zhang</a> at UIUC. My research interests lie in Agentic RL, Machine Learning Systems. 
+      <p>I am a CS graudate student at UIUC. I am fortunate to work with <a href="https://minjiazhang.github.io/">Minjia Zhang</a> at UIUC. My research interests lie in Post-training, Agentic RL, and Machine Learning Systems. 
          Specifically, I am excited about using system-algorithm co-design to improve the abilities of LLMs and LLM agents efficiently. </p>
 
       <p>
@@ -142,7 +142,7 @@
                 <div class="author"> Yueming Yuan, Ahan Gupta, <strong>Jianping Li</strong>, Sajal Dash, Feiyi Wang, Minjia Zhang</div>
                 <div class="periodical"><em><strong>SC'2025 (<span style="color: #3399ff;">Best Student Paper Nomination</span>)</strong></em></div>
                 <div class="links">
-                  <a href="https://www.arxiv.org/pdf/2508.13337">Paper</a> / <a href="https://github.com/akshatsh49/MiniKV-Dev/tree/master">Code</a>
+                  <a href="https://www.arxiv.org/pdf/2508.13337">Paper</a> / <a href="https://github.com/Supercomputing-System-AI-Lab/X-MoE">Code</a> / <a href="https://supercomputing-system-ai-lab.github.io/projects/x-moe/">Project</a>
                 </div>
               </div>
             </div>
