Update About Me section with new research interests

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <section>
       <!-- About Me Section -->
       <h3 id="about-me">About Me</h3>
-      <p>I am a CS graudate student at UIUC. I am fortunate to work with <a href="https://minjiazhang.github.io/">Minjia Zhang</a> at UIUC. My research interests lie in Machine Learning Systems, Post-training. 
-         Specifically, I am excited about using system-algorithm co-design to improve the abilities of LLMs and LLM agents efficiently. </p>
+      <p>I am a CS graudate student at UIUC. I am fortunate to work with <a href="https://tongzhang-ml.org/">Prof. Tong Zhang</a> and <a href="https://minjiazhang.github.io/">Prof. Minjia Zhang</a> at UIUC. My research interests lie in Machine Learning Systems and Deep Generative Models. 
+         Specifically, I am excited about using system-algorithm co-design to improve the reasoning abilities of LLMs and LLM agents efficiently. </p>
 
       <p>
          I love building open-source software, and I am always open to research collaboration. Feel free to contact me via email.
