--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </nav> -->
 
 
-  <div class="wrapper">
+  <div class="wrapper" role="main">
 
 
     <header>
@@ -53,7 +53,7 @@
       <a class="image avatar"><img src="assets/img/profile.jpg" alt="avatar" /></a>
 
       <!-- Your Name -->
-      <h1 style="margin: 5pt;">Jianping Li</h1>
+      <h1>Jianping Li</h1>
 
       <!-- Contact Email -->
       <email>jli199 [at] illinois.edu</email>
@@ -62,17 +62,17 @@
       
       <!-- Social Icons -->
       <div class="social-icons">
-        <a style="margin: 0 5px 0 0" href="https://scholar.google.com/citations?user=tHxcUbUAAAAJ&hl=en">
-          <i class="ai ai-google-scholar" style="font-size:1.5rem"></i>
+        <a href="https://scholar.google.com/citations?user=tHxcUbUAAAAJ&hl=en">
+          <i class="ai ai-google-scholar"></i>
         </a>
-        <a style="margin: 0 5px 0 0" href="https://github.com/jpli02">
-          <i class="fa-brands fa-github" style="font-size:1.5rem;"></i>
+        <a href="https://github.com/jpli02">
+          <i class="fa-brands fa-github"></i>
         </a>
-        <a style="margin: 0 5px 0 0" href="https://www.linkedin.com/in/jianping-li-b67b1419b/">
-          <i class="fa-brands fa-linkedin" style="font-size:1.5rem;"></i>
+        <a href="https://www.linkedin.com/in/jianping-li-b67b1419b/">
+          <i class="fa-brands fa-linkedin"></i>
         </a>
-        <a style="margin: 0 0 0 0" href="https://x.com/Jasperli0202">
-          <i class="fa-brands fa-twitter" style="font-size:1.5rem;"></i>
+        <a href="https://x.com/Jasperli0202">
+          <i class="fa-brands fa-twitter"></i>
         </a>
       </div>
       <br>
@@ -93,7 +93,7 @@
     <section>
       <!-- About Me Section -->
       <h3 id="about-me">About Me</h3>
-      <p>I am a CS graudate student at UIUC. I am fortunate to work with <a href="https://tongzhang-ml.org/">Prof. Tong Zhang</a> and <a href="https://minjiazhang.github.io/">Prof. Minjia Zhang</a> at UIUC. My research interests lie in Machine Learning Systems and Deep Generative Models. 
+      <p>I am a CS graduate student at UIUC. I am fortunate to work with <a href="https://tongzhang-ml.org/">Prof. Tong Zhang</a> and <a href="https://minjiazhang.github.io/">Prof. Minjia Zhang</a> at UIUC. My research interests lie in Machine Learning Systems and Deep Generative Models. 
          Specifically, I am excited about using system-algorithm co-design to improve the reasoning abilities of LLMs and LLM agents efficiently. </p>
 
       <p>
@@ -103,7 +103,7 @@
       
       <!-- Education Section -->
       <h3 id="education">Education</h3>
-      <div style="padding-right: 10px; padding-left: 20px;">
+      <div class="content-cards">
         <p><strong>University of Illinois Urbana-Champaign</strong> <br />
           M.S. Computer Science <br />
           2024 - Present</p>
@@ -117,7 +117,7 @@
 
       <!-- Experience Section -->
       <h3 id="experience">Experience</h3>
-      <div style="padding-right: 10px; padding-left: 20px;">
+      <div class="content-cards">
         <p><strong>Meta</strong> <br />
          Software Engineer Intern<br />
                 May 2025 - August 2025  </p>
@@ -132,12 +132,12 @@
       </div>
 
       <!-- Publications Section -->
-      <h3 id="publications" style="margin: 2px 0px -15px;">Publications</h3>
+      <h3 id="publications">Publications</h3>
       <div class="publications">
         <ol class="bibliography">
           <li>
             <div class="pub-row">
-              <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
+              <div class="col-sm-12">
                 <div class="title">X-MoE: Enabling Scalable Training for Emerging Mixture-of-Experts Architectures on HPC Platforms</div>
                 <div class="author"> Yueming Yuan, Ahan Gupta, <strong>Jianping Li</strong>, Sajal Dash, Feiyi Wang, Minjia Zhang</div>
                 <div class="periodical"><em><strong>SC'2025 (<span style="color: #3399ff;">Best Student Paper</span>)</strong></em></div>
@@ -149,7 +149,7 @@
           </li>
           <li>
             <div class="pub-row">
-              <div class="col-sm-12" style="position: relative; padding-right: 10px; padding-left: 20px;">
+              <div class="col-sm-12">
                 <div class="title">MiniKV: Pushing the Limits of LLM Inference via 2-Bit Layer-Discriminative KV Cache</div>
                 <div class="author"> Akshat Sharma, Hangliang Ding, <strong>Jianping Li</strong>, Neel Dani, Minjia Zhang</div>
                 <div class="periodical"><em><strong>ACL'2025 (Findings)</strong></em></div>
@@ -159,11 +159,6 @@
               </div>
             </div>
           </li>
-          <div style="line-height:50%;"><br /></div>
-          <!-- Repeat for additional publications -->
-          <div style="position: relative; padding-right: 10px; padding-left: 20px;">
-            <i style="font-size:.9rem;"/i>
-          </div>
         </ol>
       </div>
 
