Revise research interests in About Me section
Updated research interests to focus on LLM agents and systems for LLM training/inference.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <section>
       <!-- About Me Section -->
       <h3 id="about-me">About Me</h3>
-      <p>I am a CS graduate student at UIUC. I am fortunate to work with <a href="https://tongzhang-ml.org/">Prof. Tong Zhang</a> and <a href="https://minjiazhang.github.io/">Prof. Minjia Zhang</a> at UIUC. My research interests lie in Machine Learning Systems and Deep Generative Models. 
+      <p>I am a CS graduate student at UIUC. I am fortunate to work with <a href="https://tongzhang-ml.org/">Prof. Tong Zhang</a> and <a href="https://minjiazhang.github.io/">Prof. Minjia Zhang</a> at UIUC. My research interests lie in LLM agents and systems for LLM training/inference. 
          Specifically, I am excited about using system-algorithm co-design to improve the reasoning abilities of LLMs and LLM agents efficiently. </p>
 
       <p>
